fixed overflowing x scroll on board route and overflow hidden on bottom of same page.

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,6 +1,5 @@
 //this file conatains next js starter example code.
 .board{display: grid;
-  width: 400px;
   justify-items:center;
   align-items: center;
   height: 150px;
